Fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -119,16 +119,18 @@ body {
 .tlc-application-header {
   position: relative;
   padding: 12px 0;
+  margin-left: 7.25%;
+  margin-right: 7.25%;
 }
 
 .tlc-application-header--type {
   position: absolute;
-  left: 12px;
+  left: 0;
 }
 
 .tlc-application-header--search {
   position: absolute;
-  right: 12px;
+  right: 0;
   cursor: pointer;
   color: #7BBEDB;
 }
